--- a/webBanTiVi/src/main/resources/templates/user/page/product/detail.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/detail.html
@@ -74,7 +74,7 @@
                                                 <div th:class="|carousel-item ${image.location==true?'active':''}|"
                                                      th:each="image:${product.listImage}">
                                                     <div>
-                                                        <img th:src="@{'/image/'+${image.link}}"
+                                                        <img th:src="@{'/image/'+${image?.link}}"
                                                              alt="" class="d-block w-100">
                                                     </div>
                                                     <div class="carousel-caption d-none d-md-block">
