--- a/webBanTiVi/src/main/resources/templates/admin/page/product/add_product.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/product/add_product.html
@@ -95,7 +95,7 @@
             <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title">Danh sách biến thể</h5>
+                        <h5 class="modal-title">Danh sách thuộc tính</h5>
                         <button type="button" class="btn-close"
                                 data-bs-dismiss="modal"
                                 aria-label="Close"></button>
@@ -109,7 +109,7 @@
                                             data-bs-toggle="modal"
                                             data-bs-dismiss="modal"
                                             data-bs-target="#add-variant-modal"
-                                            id="add-variant"><span class="">Thêm biến thể</span>
+                                            id="add-variant"><span class="">Thêm thuộc tính tùy chỉnh</span>
                                     </button>
                                 </div>
                                 <input type="text" id="search-variant"
@@ -149,13 +149,13 @@
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title">Tạo biến thể</h5>
+                        <h5 class="modal-title">Tạo thuộc tính tùy chỉnh</h5>
                         <button type="button" class="btn-close"
                                 data-bs-dismiss="modal"
                                 aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <label class="label">Tên biến thể</label>
+                        <label class="label">Tên thuộc tính</label>
                         <input class="form-control" type="text" id="name-variant">
                     </div>
                     <div class="modal-footer">
@@ -243,7 +243,7 @@
                                data-bs-toggle="collapse"
                                data-bs-target="#variant"
                                aria-controls="variant">
-                            Biến thể
+                            Thuộc tính tùy chỉnh
                         </label>
                     </h2>
                     <div id="variant" class="accordion-collapse collapse overflow-auto"
@@ -275,7 +275,7 @@
 <div class="card mb-4">
     <div class="card-header">
         <div class="card-title">
-            <h5>Danh sách biến thể</h5>
+            <h5>Sản phẩm tùy chỉnh</h5>
         </div>
     </div>
     <div class="card-body" id="detail-pro">
@@ -283,7 +283,7 @@
             <table class="table table-hover table-bordered table-product" id="table-product-detail">
                 <thead>
                 <tr class="row-table fw-semibold text-center">
-                    <td>Biến thể</td>
+                    <td>Thuộc tính</td>
                     <td>Mã Sku</td>
                     <td>Số lượng</td>
                     <td>Giá nhập</td>
