--- a/webBanTiVi/src/main/resources/templates/admin/page/product/list_product.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/product/list_product.html
@@ -4,42 +4,132 @@
 <div class="mb-3">
     <a type="button" class="btn btn-secondary" href="/admin/product/add-product">Thêm sản phẩm</a>
 </div>
-<div class="card">
-    <div class="card-body">
-        <table class="table" id="table-all-product">
-            <thead>
-            <tr class="fw-semibold">
-                <th>#</th>
-                <th>Sản phẩm</th>
-                <th>Sku</th>
-                <th>Điểm trung bình</th>
-                <th>Mã tương tự</th>
-                <th>Trạng thái</th>
-                <th>Thao tác</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="product,productStat:${listProductDetail}">
-                <td th:text="${productStat.index+1}"></td>
-                <td th:text="${product.nameProduct}"></td>
-                <td th:text="${product.sku}"></td>
-                <td th:text="${product.avgPoint}"></td>
-                <td th:text="${product.same}"></td>
-                <td class="form-switch text-center"><input class="form-check-input" type="checkbox" th:checked="${product.active}"></td>
-                <td>
-                    <div class="dropdown">
-                        <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                            <i class="bx bx-dots-vertical-rounded"></i>
-                        </button>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="javascript:void(0);"><i class="bx bx-edit-alt me-1"></i> Edit</a>
-                            <a class="dropdown-item" href="javascript:void(0);"><i class="bx bx-trash me-1"></i> Delete</a>
+
+<div class="nav-align-top mb-4">
+    <form th:action="@{/admin/product/list}" id="form-product" th:object="${productDTO}" method="get">
+        <ul class="nav nav-tabs nav-fill fs-5 " role="tablist">
+            <li class="nav-item">
+                <a href="/admin/product/list">
+                    <button type="button" class="nav-link active" role="tab" data-bs-toggle="tab"
+                            data-bs-target="#navs-pills-justified-home" aria-controls="navs-pills-justified-home"
+                            aria-selected="true">
+                        Sản phẩm
+                        <span class="badge rounded-pill badge-center h-px-20 w-px-20 bg-danger">[(${listProduct.totalElements})]</span>
+
+                    </button>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/admin/product/list_detail">
+                    <button type="button" class="nav-link" role="tab" data-bs-toggle="tab"
+                            data-bs-target="#navs-pills-justified-profile" aria-controls="navs-pills-justified-profile"
+                            aria-selected="false">
+                        Sản phẩm chi tiết
+                        <span class="badge rounded-pill badge-center h-px-20 w-px-20 bg-danger">[(${#lists.size(listProductDetail)})]</span>
+                    </button>
+                </a>
+            </li>
+        </ul>
+        <div class="card rounded-bottom rounded-0 p-0">
+            <div class="card-header">
+                <div class="row justify-content-between">
+                    <div class="col-xl-2 col-4">
+                        <div class="input-group ">
+                            <label class="input-group-text" for="select-size">Xem:</label>
+                            <select class="form-select text-start" id="select-size" name="size" th:field="*{size}">
+                                <option value="10" th:selected="*{size == 10}">10</option>
+                                <option value="20" th:selected="*{size == 20}">20</option>
+                                <option value="40" th:selected="*{size == 40}">40</option>
+                                <option value="80" th:selected="*{size == 80}">80</option>
+                            </select>
                         </div>
                     </div>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
+                    <div class="col-6">
+                        <div class="input-group">
+                            <label class="input-group-text" for="select-size">Sắp xếp:</label>
+                            <select class="form-select text-start" id="sort" name="size" th:field="*{sort}">
+                                <option value="1" th:selected="*{sort == 1}">Mới nhất</option>
+                                <option value="2" th:selected="*{sort == 2}">Cũ nhất</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card-body table-responsive">
+                <table class="table table-hover" id="table-all-product">
+                    <thead>
+                    <tr class="fw-semibold">
+<!--                        <th>#</th>-->
+                        <th>Sản phẩm</th>
+                        <th>Sku</th>
+                        <th>Điểm trung bình</th>
+                        <th>Mã tương tự</th>
+                        <th>Trạng thái</th>
+                        <th>Thao tác</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="product,productStat:${listProduct}">
+<!--                        <td th:text="${productStat.index+1}"></td>-->
+                        <td th:text="${product.nameProduct}"></td>
+                        <td th:text="${product.sku}"></td>
+                        <td th:text="${product.avgPoint}"></td>
+                        <td th:text="${product.same}"></td>
+                        <td class="form-switch text-center"><input class="form-check-input" type="checkbox"
+                                                                   th:checked="${product.active}"></td>
+                        <td>
+                            <div class="dropdown">
+                                <button type="button" class="btn p-0 dropdown-toggle hide-arrow"
+                                        data-bs-toggle="dropdown">
+                                    <i class="bx bx-dots-vertical-rounded"></i>
+                                </button>
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item" href="javascript:void(0);"><i
+                                            class="bx bx-edit-alt me-1"></i> Edit</a>
+                                    <a class="dropdown-item" href="javascript:void(0);"><i
+                                            class="bx bx-trash me-1"></i> Delete</a>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="card-footer">
+                <div>
+                    <div aria-label="Page pagination">
+                        <ul class="pagination justify-content-center">
+                            <li class="page-item first">
+                                <a class="page-link" id="first" th:value="1" type="button">
+                                    <i class="tf-icon bx bx-chevrons-left"></i>
+                                </a>
+                            </li>
+                            <li class="page-item prev">
+                                <a class="page-link" id="prev" ><i class="tf-icon bx bx-chevron-left"></i></a>
+                            </li>
+                            <li class="page-item mx-2">
+                                <div class="input-group input-group-merge">
+                                    <input class="form-control inputPage" id="pageInput" type="number" name="page"
+                                           th:value="*{page}">
+                                    <span class="input-group-text" id="total" th:value="${listProduct.totalPages}">/[(${listProduct.totalPages})]</span>
+<!--                                                                    <input id="totalPage" value="${session.list.totalPages}" hidden="hidden">-->
+                                </div>
+                            </li>
+                            <li class="page-item next">
+                                <a class="page-link" id="next">
+                                    <i class="tf-icon bx bx-chevron-right"></i>
+                                </a>
+                            </li>
+                            <li class="page-item last">
+                                <a class="page-link" id="last" th:value="${listProduct.totalPages}">
+                                    <i class="tf-icon bx bx-chevrons-right"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
 </div>
 <script src="/admin/plugin/js/list-product.js"></script>
