--- a/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
+++ b/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
@@ -3,6 +3,10 @@
         border-bottom: 2px solid #b1154a;
     }
 
+    .nav-link.page.active {
+        border-bottom: 2px solid #b1154a;
+    }
+
     .nav-item:hover {
         transform: scale(1.05);
     }
@@ -100,22 +104,23 @@
             <div class="collapse navbar-collapse fs-5" id="nav2">
                 <ul class="navbar-nav me-lg-auto mb-2 mb-lg-0">
                     <li class="nav-item mx-3">
-                        <a class="nav-link active page" aria-current="page" href="/">Trang chủ</a>
+                        <a th:class="|nav-link page ${active=='home' ?'active':''}|" aria-current="page" href="/">Trang
+                            chủ</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a class="nav-link page" href="/tivi">Tivi</a>
+                        <a th:class="|nav-link page ${active=='tivi' ?'active':''}|" href="/tivi">Tivi</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a class="nav-link page" href="/accessory">Phụ kiện</a>
+                        <a th:class="|nav-link page ${active=='accesory' ?'active':''}|" href="/accessory">Phụ kiện</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a class="nav-link page" href="/invoice">Đơn hàng</a>
+                        <a th:class="|nav-link page ${active=='invoice' ?'active':''}|" href="/invoice">Đơn hàng</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a class="nav-link page" href="/promotion">Khuyến mãi</a>
+                        <a th:class="|nav-link page ${active=='promotion' ?'active':''}|" href="/promotion">Khuyến mãi</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a class="nav-link page" href="javascript:void(0)">Liên hệ</a>
+                        <a th:class="|nav-link page ${active=='about' ?'active':''}|" href="javascript:void(0)">Liên hệ</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
