--- a/webBanTiVi/src/main/resources/templates/user/page/home/home.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/home/home.html
@@ -1,7 +1,6 @@
 <link rel="stylesheet" href="/admin/plugin/css/card-product.css">
 
 <style>
-
     /* CSS cho nút "Previous" và "Next" */
     .carousel-control-prev-cus,
     .carousel-control-next-cus {
@@ -26,6 +25,18 @@
         /*background: linear-gradient(to right, #e03c3c, #ffffff);*/
         color: #f5f5f5 !important;
         background-color: #e03c3c !important;
+    }
+
+    .carousel-control-prev,
+    .carousel-control-next {
+        color: #171108;
+        width: auto;
+    }
+
+    .carousel-control-prev:hover, .carousel-control-prev:focus,
+    .carousel-control-next:hover,
+    .carousel-control-next:focus {
+        color: #171108;
     }
 </style>
 
@@ -124,24 +135,12 @@
     <!--    </section>-->
     <section>
         <div class="mb-4">
-            <!--            <div class="">-->
             <div class="row mb-4 pt-3 row-cols-lg-3 row-cols-md-3 row-cols-xl-3"><h3
                     class="header col text-center bg-white pt-2 pb-2 title px-3 text-uppercase fw-bold">Sản phẩm nổi
                 bật</h3>
-                <div class="col text-end">
-                    <button class="carousel-control-prev-cus" type="button" data-bs-target="#carouselTopRate"
-                            data-bs-slide="prev">
-                        <i class='bx bx-chevron-left bx-md'></i>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next-cus" type="button" data-bs-target="#carouselTopRate"
-                            data-bs-slide="next">
-                        <i class='bx bx-chevron-right bx-md'></i>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
             </div>
-            <div class="row mt-n3 mb-3"><a class="fs-6 text-end text-decoration-underline link-dark" href="#">Xem tất
+            <div class="row mt-n3 mb-3 justify-content-end"><a
+                    class="fs-6 text-end text-decoration-underline link-dark w-auto" href="#">Xem tất
                 cả</a></div>
             <div id="carouselTopRate" class="carousel slide" data-bs-ride="false" data-bs-interval="false">
                 <div class="carousel-inner">
@@ -265,7 +264,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row row-cols-1 row-cols-xl-6 row-cols-lg-4 row-cols-md-4 row-cols-sm-2 g-4">
+                        <div class="row row-cols-1 row-cols-md-5 row-cols-sm-2 g-4">
                             <div class="col">
                                 <div class="card h-100 item-product">
                                     <img class="card-img-top" src="/image/download.jpg"
@@ -384,7 +383,16 @@
                         </div>
                     </div>
                 </div>
-                <!--                </div>-->
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselTopRate"
+                        data-bs-slide="prev">
+                    <i class='bx bx-chevron-left bx-lg'></i>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselTopRate"
+                        data-bs-slide="next">
+                    <i class='bx bx-chevron-right bx-lg'></i>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </div>
     </section>
@@ -396,20 +404,9 @@
             <!--            <div class="">-->
             <div class="row mb-4 pt-3 row-cols-lg-3 row-cols-md-3 row-cols-xl-3"><h3
                     class="header col text-center bg-white pt-2 pb-2 title px-3 text-uppercase fw-bold">Tivi</h3>
-                <div class="col text-end">
-                    <button class="carousel-control-prev-cus" type="button" data-bs-target="#carouselTivi"
-                            data-bs-slide="prev">
-                        <i class='bx bx-chevron-left bx-md'></i>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next-cus" type="button" data-bs-target="#carouselTivi"
-                            data-bs-slide="next">
-                        <i class='bx bx-chevron-right bx-md'></i>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
             </div>
-            <div class="row mt-n3 mb-3"><a class="fs-6 text-end text-decoration-underline link-dark" href="#">Xem tất
+            <div class="row mt-n3 mb-3 justify-content-end"><a
+                    class="fs-6 text-end text-decoration-underline link-dark w-auto" href="#">Xem tất
                 cả</a></div>
             <div id="carouselTivi" class="carousel slide" data-bs-ride="false" data-bs-interval="false">
                 <div class="carousel-inner">
@@ -530,10 +527,125 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="col">
+                                <div class="card h-100 item-product">
+                                    <img class="card-img-top" src="/image/smart-tivi-toshiba-43-inch-43v31mp-01.jpg"
+                                         alt="Card image cap"/>
+                                    <div class="card-body">
+                                        <a href="#" class="stretched-link mb-2"><span
+                                                class="fs-4 fw-semibold card-title">
+                                                        Tên</span></a>
+                                        <div class="mb-1"><span class="border mx-1 p-1">43 inch</span><span
+                                                class="border mx-1 p-1">4k</span>
+                                        </div>
+                                        <div><span class="text-strike-through fs-big">5000 <small
+                                                class="align-text-top">đ</small></span>
+                                        </div>
+                                        <div><span class="text-danger fs-large fw-bold">5000 <small
+                                                class="align-text-top">đ</small></span>
+                                        </div>
+                                        <div>
+                                            <span>4.5<i class='bx bxs-star' style='color:#fee500'></i>(200)</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card h-100 item-product">
+                                    <img class="card-img-top" src="/image/smart-tivi-toshiba-43-inch-43v31mp-02.jpg"
+                                         alt="Card image cap"/>
+                                    <div class="card-body">
+                                        <a href="#" class="stretched-link mb-2"><span
+                                                class="fs-4 fw-semibold card-title">
+                                                        Tên</span></a>
+                                        <div class="mb-1"><span class="border mx-1 p-1">43 inch</span><span
+                                                class="border mx-1 p-1">4k</span>
+                                        </div>
+                                        <div><span class="text-strike-through fs-big">5000 <small
+                                                class="align-text-top">đ</small></span>
+                                        </div>
+                                        <div><span class="text-danger fs-large fw-bold">5000 <small
+                                                class="align-text-top">đ</small></span>
+                                        </div>
+                                        <div>
+                                            <span>4.5<i class='bx bxs-star' style='color:#fee500'></i>(200)</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card h-100 item-product">
+                                    <img class="card-img-top" src="/image/smart-tivi-toshiba-43-inch-43v31mp-02.jpg"
+                                         alt="Card image cap"/>
+                                    <div class="card-body">
+                                        <a href="#" class="stretched-link mb-2"><span
+                                                class="fs-4 fw-semibold card-title">
+                                                        Tên</span></a>
+                                        <div class="mb-1"><span class="border mx-1 p-1">43 inch</span><span
+                                                class="border mx-1 p-1">4k</span>
+                                        </div>
+                                        <div><span class="text-strike-through fs-big">5000 <small
+                                                class="align-text-top">đ</small></span>
+                                        </div>
+                                        <div><span class="text-danger fs-large fw-bold">5000 <small
+                                                class="align-text-top">đ</small></span>
+                                        </div>
+                                        <div>
+                                            <span>4.5<i class='bx bxs-star' style='color:#fee500'></i>(200)</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card h-100 item-product">
+                                    <img class="card-img-top" src="/image/smart-tivi-toshiba-43-inch-43v31mp-02.jpg"
+                                         alt="Card image cap"/>
+                                    <div class="card-body">
+                                        <a href="#" class="stretched-link mb-2"><span
+                                                class="fs-4 fw-semibold card-title">
+                                                        Tên</span></a>
+                                        <div class="mb-1"><span class="border mx-1 p-1">43 inch</span><span
+                                                class="border mx-1 p-1">4k</span>
+                                        </div>
+                                        <div><span class="text-strike-through fs-big">5000 <small
+                                                class="align-text-top">đ</small></span>
+                                        </div>
+                                        <div><span class="text-danger fs-large fw-bold">5000 <small
+                                                class="align-text-top">đ</small></span>
+                                        </div>
+                                        <div>
+                                            <span>4.5<i class='bx bxs-star' style='color:#fee500'></i>(200)</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card h-100 item-product">
+                                    <img class="card-img-top" src="/image/smart-tivi-toshiba-43-inch-43v31mp-02.jpg"
+                                         alt="Card image cap"/>
+                                    <div class="card-body">
+                                        <a href="#" class="stretched-link mb-2"><span
+                                                class="fs-4 fw-semibold card-title">
+                                                        Tên</span></a>
+                                        <div class="mb-1"><span class="border mx-1 p-1">43 inch</span><span
+                                                class="border mx-1 p-1">4k</span>
+                                        </div>
+                                        <div><span class="text-strike-through fs-big">5000 <small
+                                                class="align-text-top">đ</small></span>
+                                        </div>
+                                        <div><span class="text-danger fs-large fw-bold">5000 <small
+                                                class="align-text-top">đ</small></span>
+                                        </div>
+                                        <div>
+                                            <span>4.5<i class='bx bxs-star' style='color:#fee500'></i>(200)</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row row-cols-1 row-cols-xl-6 row-cols-lg-4 row-cols-md-4 row-cols-sm-2 g-4">
+                        <div class="row row-cols-1 row-cols-md-5 row-cols-sm-2 g-4">
                             <div class="col">
                                 <div class="card h-100 item-product">
                                     <img class="card-img-top" src="/image/download.jpg"
@@ -653,6 +765,16 @@
                     </div>
                 </div>
                 <!--                </div>-->
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselTivi"
+                        data-bs-slide="prev">
+                    <i class='bx bx-chevron-left bx-lg'></i>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselTivi"
+                        data-bs-slide="next">
+                    <i class='bx bx-chevron-right bx-lg'></i>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </div>
     </section>
@@ -661,20 +783,9 @@
             <!--            <div class="">-->
             <div class="row mb-4 pt-3 row-cols-lg-3 row-cols-md-3 row-cols-xl-3"><h3
                     class="header col text-center bg-white pt-2 pb-2 title px-3 text-uppercase fw-bold">Phụ kiện</h3>
-                <div class="col text-end">
-                    <button class="carousel-control-prev-cus" type="button" data-bs-target="#carouselPhukien"
-                            data-bs-slide="prev">
-                        <i class='bx bx-chevron-left bx-md'></i>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next-cus" type="button" data-bs-target="#carouselPhukien"
-                            data-bs-slide="next">
-                        <i class='bx bx-chevron-right bx-md'></i>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
             </div>
-            <div class="row mt-n3 mb-3"><a class="fs-6 text-end text-decoration-underline link-dark" href="#">Xem tất
+            <div class="row mt-n3 mb-3 justify-content-end"><a
+                    class="fs-6 text-end text-decoration-underline link-dark w-auto" href="#">Xem tất
                 cả</a></div>
             <div id="carouselPhukien" class="carousel slide" data-bs-ride="false" data-bs-interval="false">
                 <div class="carousel-inner">
@@ -798,7 +909,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row row-cols-1 row-cols-xl-6 row-cols-lg-4 row-cols-md-4 row-cols-sm-2 g-4">
+                        <div class="row row-cols-1 row-cols-md-5 row-cols-sm-2 g-4">
                             <div class="col">
                                 <div class="card h-100 item-product">
                                     <img class="card-img-top" src="/image/download.jpg"
@@ -918,6 +1029,16 @@
                     </div>
                 </div>
                 <!--                </div>-->
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselPhukien"
+                        data-bs-slide="prev">
+                    <i class='bx bx-chevron-left bx-lg'></i>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselPhukien"
+                        data-bs-slide="next">
+                    <i class='bx bx-chevron-right bx-lg'></i>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </div>
     </section>
